First round copy edits for subtopics

--- a/source/_views/topic.html
+++ b/source/_views/topic.html
@@ -18,6 +18,9 @@
           {% if page.bullet4 is defined %}
           <li>{{ page.bullet4 }} </li>
           {% endif %}
+          {% if page.bullet5 is defined %}
+          <li>{{ page.bullet5 }} </li>
+          {% endif %}
         </ul>
       </div>
     </div>
@@ -29,7 +32,7 @@
           <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-migrate.svg)"></div>
           <div class="topic-info__text">
             <h3 class="topic-info__title">Migrating to Pantheon</h3>
-            <p class="topic-info__description">Beard tote bag blog, bicycle rights iPhone williamsburg gentrify pabst.</p>
+            <p class="topic-info__description">Import existing sites using our guided migration tool, or migrate manually to preserve existing commit history.</p>
           </div>
         </div>
     </a>
@@ -57,7 +60,7 @@
         <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-commandline.svg)"></div>
         <div class="topic-info__text">
           <h3 class="topic-info__title">Command Line Tools</h3>
-          <p class="topic-info__description">Beard tote bag blog, bicycle rights iPhone williamsburg gentrify pabst.</p>
+          <p class="topic-info__description">Run WP-CLI and Drush commands, script repetitive tasks, and unlock advanced interactions on the Site Dashboard using our CLI, Terminus.</p>
         </div>
       </div>
     </a>
@@ -68,7 +71,7 @@
         <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-git.svg)"></div>
         <div class="topic-info__text">
           <h3 class="topic-info__title">Git</h3>
-          <p class="topic-info__description">Beard tote bag blog, bicycle rights iPhone williamsburg gentrify pabst.</p>
+          <p class="topic-info__description">Push code changes to the platform using Git mode.</p>
         </div>
       </div>
     </a>
@@ -79,7 +82,7 @@
         <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-serverdev.svg)"></div>
         <div class="topic-info__text">
           <h3 class="topic-info__title">On-Server Development (SFTP)</h3>
-          <p class="topic-info__description">Beard tote bag blog, bicycle rights iPhone williamsburg gentrify pabst.</p>
+          <p class="topic-info__description">Manage plugins, modules, and themes within the WordPress Dashboard or Drupal Admin using SFTP mode.</p>
         </div>
       </div>
     </a>
@@ -107,7 +110,7 @@
           <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-domains.svg)"></div>
           <div class="topic-info__text">
             <h3 class="topic-info__title">Pointing Domains to Pantheon</h3>
-            <p class="topic-info__description">Beard tote bag blog, bicycle rights iPhone williamsburg gentrify pabst.</p>
+            <p class="topic-info__description">Add custom domains to environments, configure DNS, and use PHP for redirecting to a common domain.</p>
           </div>
       </div>
     </a>
@@ -135,7 +138,7 @@
         <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-yml.svg)"></div>
         <div class="topic-info__text">
           <h3 class="topic-info__title">Pantheon.yml</h3>
-          <p class="topic-info__description">Beard tote bag blog, bicycle rights iPhone williamsburg gentrify pabst.</p>
+          <p class="topic-info__description">Hook into platform workflows and manage advanced site configurations like PHP versions and Drush versions.</p>
         </div>
       </div>
     </a>
@@ -193,7 +196,7 @@
           <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-caching.svg)"></div>
           <div class="topic-info__text">
             <h3 class="topic-info__title">Caching</h3>
-            <p class="topic-info__description">Beard tote bag blog, bicycle rights iPhone williamsburg gentrify pabst.</p>
+            <p class="topic-info__description">Interact with the edge layer of our platform and use advanced caching techniques to improve overall website performance.</p>
           </div>
       </div>
     </a>
