--- a/source/docs.html
+++ b/source/docs.html
@@ -41,7 +41,7 @@ ul.pio-breadcrumb {
             <div class="topic-info__text">
               <div class="main-topic-info__image" style="background-image:url(/source/docs/assets/images/icon-develop.svg)"></div>
               <h2 class="main-topic-info__title">Develop</h2>
-              <p class="main-topic-info__description">Setup your local or  work via SFTP and Git within our Dev, Test, and Live environments to follow development best practices.</p>
+              <p class="main-topic-info__description">Set up your local or  work via SFTP and Git within our Dev, Test, and Live environments to follow development best practices.</p>
             </div>
 
         </a>
@@ -104,7 +104,7 @@ ul.pio-breadcrumb {
 
             <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-manage.svg)"></div>
             <div class="topic-info__text">
-              <h3 class="topic-info__title">Manage Users and Organizations</h3>
+              <h3 class="topic-info__title">Manage Teams & Organizations</h3>
               <p class="topic-info__description">Add team members, restrict access, and manage projects in bulk using cloud-based development tools.</p>
             </div>
 
