Copy edits to footer and breadcrumbs

--- a/source/_partials/breadcrumb.html
+++ b/source/_partials/breadcrumb.html
@@ -23,7 +23,7 @@
                 {% elseif category == "local" %}
                 <a href="{{ site.url }}/develop/local">Local</a> /
                 {% elseif category == "platform" %}
-                <a href="{{ site.url }}/{{ category|url_encode(true) }}">Platform & Inftrastructure</a> /
+                <a href="{{ site.url }}/{{ category|url_encode(true) }}">Explore Platform Infrastructure</a> /
                 {% elseif category == "pantheonyml" %}
                 <a href="{{ site.url }}/platform/pantheon-yml">Pantheon.yml</a> /
                 {% elseif category == "automate" %}
@@ -31,7 +31,7 @@
                 {% elseif category == "performance" %}
                 <a href="{{ site.url }}/{{ category|url_encode(true) }}" >Optimize Performance</a> /
                 {% elseif category == "manage" %}
-                <a href="{{ site.url }}/{{ category|url_encode(true) }}">Manage Users & Orgs</a> /
+                <a href="{{ site.url }}/{{ category|url_encode(true) }}">Manage Teams & Organizations</a> /
                 {% elseif category == "cli" %}
                 <a href="{{ site.url }}/automate/cli">Command Line Tools</a> /
                 {% elseif category == "cache" %}
