--- a/source/_partials/footer_content.html
+++ b/source/_partials/footer_content.html
@@ -51,7 +51,7 @@
                     <a href="/docs/performance">Optimize Performance</a>
                   </li>
                   <li class="leaf menu-mlid-1149">
-                    <a href="/docs/manage">Manage Users and Organizations</a>
+                    <a href="/docs/manage">Manage Teams & Organizations</a>
                   </li>
                   <li class="leaf menu-mlid-1162">
                     <a href="/docs/troubleshoot">Troubleshoot</a>
