Update copy for domains subtopic

--- a/source/_views/topic.html
+++ b/source/_views/topic.html
@@ -104,7 +104,7 @@
         <div class="topic-info mb-70">
           <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-domains.svg)"></div>
           <div class="topic-info__text">
-            <h3 class="topic-info__title">Pointing Domains to Pantheon</h3>
+            <h3 class="topic-info__title">Point Domains to Pantheon</h3>
             <p class="topic-info__description">Add custom domains to environments, configure DNS, and use PHP for redirecting to a common domain.</p>
           </div>
       </div>
