--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -78,7 +78,7 @@ terminusCompareApp.config(function($interpolateProvider) {
 terminusCompareApp.controller('mainController', function($scope, $http) {
   $scope.searchCommand   = '';
   $scope.terminus = [];
-  $http.get("/_docs/terminus/commands/compare.json").success(function(response){
+  $http.get("/docs/assets/terminus/compare.json").success(function(response){
     $scope.terminus = response;
   });
   $scope.clearFilters = function(){
@@ -100,38 +100,6 @@ terminusCompareApp.filter('search', function() {
 }
 });
 
-var terminusCommandsApp = angular.module('terminusCommandsApp', ['ngMaterial']);
-
-terminusCommandsApp.config(function($interpolateProvider) {
-  $interpolateProvider.startSymbol('{[{');
-  $interpolateProvider.endSymbol('}]}');
-});
-
-terminusCommandsApp.controller('mainController', function($scope, $http) {
-  $scope.searchCommand   = '';
-  $scope.terminus = [];
-  $http.get("/_docs/terminus/commands.json").success(function(response){
-    $scope.terminus = response;
-  });
-  $scope.clearFilters = function(){
-      $scope.searchCommand =  undefined;
-  };
-});
-
-//Sort usage array by relevance based on Regex matches from search query
-terminusCommandsApp.filter('search', function() {
-  return function (items, str) {
-    if(str == '') return items;
-    var filtered = [];
-    var rgx = new RegExp(str, 'gi');
-
-    angular.forEach(items, function(item) {
-      item.points = (JSON.stringify(item).match(rgx) || []).length;
-      filtered.push(item);
-    });
-  return filtered;
-}
-});
 
 </script>
 <div class="navbar navbar-fixed-top pio-docs-nav" role="navigation">
@@ -231,6 +199,7 @@ terminusCommandsApp.filter('search', function() {
                   <div class="row sub-menu-bottom">
                       <div class="col-xs-12">
                         <li><a id="changelogs" href="/docs/changelog">Changelog</a></li>
+                        <li><a id="terminus" href="/docs/terminus">Terminus Manual</a></li>
                       </div>
 
                   </div>
