--- a/source/_views/taxon.html
+++ b/source/_views/taxon.html
@@ -100,6 +100,7 @@
           <div style="row">
                 <ul class="pio-breadcrumb" style="margin-top:30px;">
                     <a href="/docs">Home</a> / <a href="/docs/terminus">Terminus Manual</a> / <a data-proofer-ignore class="not-allowed">{{ page.title }}</a>
+                  </div>
           {% endif %}
           <h1 style="margin-bottom:30px;" class="pio-docs-title">{{page.title}}</h1>
             {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
