--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -4,6 +4,42 @@
 <script src="/docs/assets/js/node_modules/angular-material/angular-material.min.js"></script>
 <script src="/docs/assets/js/node_modules/angular-animate/angular-animate.min.js"></script>
 <script src="/docs/assets/js/node_modules/angular-aria/angular-aria.min.js"></script>
+{% if page.terminuspage %}
+
+<script type="text/javascript">
+function setActivetrail() {
+  aaObj = document.getElementById('manual-toc').getElementsByTagName('a');
+  for(i=0;i<aaObj.length;i++) {
+    if(document.location.href.indexOf(aaObj[i].href)>=0 ){
+      aaObj[i].className='active-trail';
+      if(/\/install.*/.test(aaObj[i].href)>=1) {
+        $('#docs-terminus').removeClass('active-trail');
+      }
+      if(/\/examples.*/.test(aaObj[i].href)>=1) {
+        $('#docs-terminus').removeClass('active-trail');
+      }
+      if(/\/commands.*/.test(aaObj[i].href)>=1) {
+        $('#docs-terminus').removeClass('active-trail');
+      }
+      if(/\/releases.*/.test(aaObj[i].href)>=1) {
+        $('#docs-terminus').removeClass('active-trail');
+      }
+      if(/\/plugins.*/.test(aaObj[i].href)>=1) {
+        $('#docs-terminus').removeClass('active-trail');
+      }
+      if(/\/directory.*/.test(aaObj[i].href)>=1) {
+        $('#docs-terminus-plugins').removeClass('active-trail');
+      }
+      if(/\/create.*/.test(aaObj[i].href)>=1) {
+        $('#docs-terminus-plugins').removeClass('active-trail');
+      }
+    }
+  }
+}
+window.addEventListener("load", setActivetrail);
+</script>
+{% endif %}
+
 <script>
 var terminusCompareApp = angular.module('terminusCompareApp', ['ngMaterial']);
 var terminusLatestRelease = angular.module("terminusLatestReleaseApp", ['yaru22.md']);
@@ -102,6 +138,7 @@ terminusCompareApp.filter('search', function() {
 
 
 </script>
+
 <div class="navbar navbar-fixed-top pio-docs-nav" role="navigation">
         <div class="navbar-header">
             <!-- Nav Collapse button -->
