Update popular docs based on traffic in the last 30 days

--- a/source/docs.html
+++ b/source/docs.html
@@ -152,18 +152,18 @@ ul.pio-breadcrumb {
   <div class="row mb-70">
     <div class="col-md-12">
     <ul class="top-docs top-docs-3col">
+      <li><a href="/docs/terminus">Terminus Manual</a></li>
+      <li><a href="/docs/guides/cloudflare-enable-https">Adding HTTPS For Free With Cloudflare</a></li>
       <li><a href="/docs/kill-mysql-queries">Identify and Kill MySQL Queries</a></li>
       <li><a href="/docs/domains">Domains and DNS</a></li>
       <li><a href="/docs/settings-php">Configuring settings.php</a></li>
-      <li><a href="/docs/guides/cloudflare-enable-https">Adding HTTPS For Free With Cloudflare</a></li>
-      <li><a href="/docs/pantheon-workflow">Using the Pantheon Workflow</a></li>
       <li><a href="/docs/git-faq">Git FAQs</a></li>
-      <li><a href="/docs/terminus">Terminus,the Pantheon Command-Line Interface (CLI)</a></li>
       <li><a href="/docs/ssh-keys">Generating and Adding SSH Keys</a></li>
+      <li><a href="/docs/redirects">Redirect Incoming Requests</a></li>
+      <li><a href="/docs/pantheon-workflow">Using the Pantheon Workflow</a></li>
       <li><a href="/docs/redis">Redis as a Caching Backend</a></li>
+      <li><a href="/docs/enable-https">Enable Secure HTTPS Communication</a></li>
       <li><a href="/docs/drush">Drupal Drush Command-Line Utility</a></li>
-      <li><a href="/docs/sftp">Developing on Pantheon Directly with SFTP Mode</a></li>
-      <li><a href="/docs/migrate">Migrate Sites to Pantheon</a></li>
     </ul>
     </div>
   </div>
