--- a/source/_views/default.html
+++ b/source/_views/default.html
@@ -39,6 +39,7 @@
     <meta name="description" content="{{ page.description }}">
     <meta name="keywords" content="{{ page.keywords }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="canonical" href="{{ site.site_url}}{{ page.url }}/" />
 
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="{{ page.title}}">
