Copy edits for naming conventions

--- a/source/_partials/terminus_navbar.html
+++ b/source/_partials/terminus_navbar.html
@@ -5,10 +5,10 @@
     <li><a id="docs-terminus-install" href="/docs/terminus/install">Install</a></li>
     <li><a id="docs-terminus-examples" href="/docs/terminus/examples">Example Usage</a></li>
     <li><a id="docs-terminus-commands" href="/docs/terminus/commands">Commands</a></li>
-    <li><a id="docs-terminus-plugins" href="/docs/terminus/plugins">Plugins</a></li>
+    <li><a id="docs-terminus-plugins" href="/docs/terminus/plugins">Extend with Plugins</a></li>
     <ul id="manual-toc" class="manual-toc child">
       <li><a id="docs-terminus-directory" href="/docs/terminus/plugins/directory">Directory</a></li>
-      <li><a id="docs-terminus-create" href="/docs/terminus/plugins/create">Create</a></li>
+      <li><a id="docs-terminus-create" href="/docs/terminus/plugins/create">Create Plugins</a></li>
     </ul>
   </ul>
 </div>
