--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -89,8 +89,8 @@ terminusCommandsApp.controller('mainController', function($scope, $http) {
   $http.get('/docs/assets/terminus/commands.json')
     .then(function (response) {
       var data = response.data;
-      var old = JSON.stringify(data).replace(/(<site_env>)/g, "<site>.<env>").replace(/(<site_env_id>)/g, "<site>.<env>").replace(/(<site_id>)/g, "<site>").replace(/(<site_name>)/g, "<site>");
-      var newArray = JSON.parse(old); //convert back to array
+      var old = JSON.stringify(data).replace(/(<site_env>)/g, "<site>.<env>").replace(/(<site_env_id>)/g, "<site>.<env>").replace(/(<site_id>)/g, "<site>").replace(/(<site_name>)/g, "<site>").replace(/(\[<drush_command>\]\.\.\.)/g, "-- <drush_command>").replace(/(\[<wp_command>\]\.\.\.)/g, "-- <wp_command>");
+      var newArray = JSON.parse(old);
       $scope.terminus = newArray;
   });
   $scope.clearFilters = function(){
