--- a/source/_views/topic.html
+++ b/source/_views/topic.html
@@ -67,6 +67,17 @@
     </div>
   </a>
 </div>
+<div class="col-md-6">
+  <a class="topic-info-link" href="/docs/develop/local">
+    <div class="topic-info">
+      <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-local.svg)"></div>
+      <div class="topic-info__text">
+        <h3 class="topic-info__title">Local Development</h3>
+        <p class="topic-info__description">Sync your code, database, and files for local development.</p>
+      </div>
+    </div>
+  </a>
+</div>
 <div class="col-md-6 mb-70">
   <a class="topic-info-link" href="/docs/develop/sftp">
     <div class="topic-info">
@@ -328,6 +339,23 @@
     {% endif %}
     {% endfor %}
     {% for doc in data.docs_tags.git if doc.meta.type == "guide"%}
+    <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
+    {% endfor %}
+  </ul>
+</div>
+{% elseif page.local %}
+<div class="col-md-12 mb-70">
+  <h4 style="margin-top:0;">More on this topic</h4>
+  <ul class="top-docs top-docs-2col">
+    {% for doc in data.docs_tags.local if doc.meta.type == "video"%}
+    <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+    {% endfor %}
+    {% for doc in data.docs_tags.local %}
+    {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
+    <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
+    {% endif %}
+    {% endfor %}
+    {% for doc in data.docs_tags.local if doc.meta.type == "guide"%}
     <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
     {% endfor %}
   </ul>
