Update year in footer; dynamic timestamp

--- a/source/_partials/footer_content.html
+++ b/source/_partials/footer_content.html
@@ -126,7 +126,7 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="copyright">
-                  © 2016 Pantheon <span>|</span> 717 California Street, San Francisco, CA <span class="responsive-pipe">|</span> <a class="new-line" href="https://pantheon.io/privacy">Privacy Policy</a> <span>|</span> <a href="https://pantheon.io/pantheon-terms-service">Terms of Use</a>
+                  © {{ "now"|date("Y") }} Pantheon <span>|</span> 717 California Street, San Francisco, CA <span class="responsive-pipe">|</span> <a class="new-line" href="https://pantheon.io/privacy">Privacy Policy</a> <span>|</span> <a href="https://pantheon.io/pantheon-terms-service">Terms of Use</a>
                 </div>
               </div>
             </div>
