Add drush video and redefine video content type

--- a/source/_views/video.html
+++ b/source/_views/video.html
@@ -63,12 +63,12 @@
 
 
 <!--     {% include ("sidebarnav.html") %} -->
-    <h4>Related</h4>
+<!--    <h4>Related</h4>
     <ul class="related">
       <li><a href="/docs/machine-tokens">Creating and Revoking Machine Tokens</a></li>
     	<li><a href="/docs/guides/wordpress-automated-testing">Automated Testing WordPress with Behat</a></li>
     	<li><a href="/docs/guides/wordpress-commandline">Use the Command Line to Create a WordPress Site Using Terminus and WP-CLI</a></li>
-    </ul>
+    </ul>-->
 </div>
 
 {% endblock %}
