Second pass cli subtopic and taxon org

--- a/source/_views/topic.html
+++ b/source/_views/topic.html
@@ -62,7 +62,7 @@
       <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-git.svg)"></div>
       <div class="topic-info__text">
         <h3 class="topic-info__title">Command Line Interface (CLI) </h3>
-        <p class="topic-info__description">.....</p>
+        <p class="topic-info__description">Use Terminus for advanced interaction with the platform from the command-line.</p>
       </div>
     </div>
   </a>
@@ -179,7 +179,7 @@
       <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-git.svg)"></div>
       <div class="topic-info__text">
         <h3 class="topic-info__title">Command Line Interface (CLI) </h3>
-        <p class="topic-info__description">.....</p>
+        <p class="topic-info__description">Use Terminus for advanced interaction with the platform from the command-line.</p>
       </div>
     </div>
   </a>
