Move cli topic to develop subdir

--- a/source/_views/topic.html
+++ b/source/_views/topic.html
@@ -57,7 +57,7 @@
 </div>
 {% elseif page.develop %}
 <div class="col-md-6">
-  <a class="topic-info-link" href="/docs/automate/cli">
+  <a class="topic-info-link" href="/docs/develop/cli">
     <div class="topic-info">
       <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-git.svg)"></div>
       <div class="topic-info__text">
@@ -174,7 +174,7 @@
 </div>
 {% elseif page.automate %}
 <div class="col-md-6 mb-70">
-  <a class="topic-info-link" href="/docs/automate/cli">
+  <a class="topic-info-link" href="/docs/develop/cli">
     <div class="topic-info">
       <div class="topic-info__image" style="background-image:url(/source/docs/assets/images/icon-git.svg)"></div>
       <div class="topic-info__text">
