Fix breadcrumbs and add drush ver doc to cli

--- a/source/_partials/breadcrumb.html
+++ b/source/_partials/breadcrumb.html
@@ -33,7 +33,7 @@
                 {% elseif category == "manage" %}
                 <a href="{{ site.url }}/{{ category|url_encode(true) }}">Manage Teams & Organizations</a> /
                 {% elseif category == "cli" %}
-                <a href="{{ site.url }}/automate/cli">Command Line Tools</a> /
+                <a href="{{ site.url }}/develop/cli">Command Line Tools</a> /
                 {% elseif category == "cache" %}
                 <a href="{{ site.url }}/performance/cache">Cache</a> /
                 {% else %}
