--- a/source/_views/video.html
+++ b/source/_views/video.html
@@ -50,12 +50,6 @@
         {{ page.blocks.content|raw }}
     </div>
 
-    <div class="helpful">
-      <span class="helpful__text">Was this helpful?</span>
-      <button class="helpful__button helpful__button--yes"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i>Yes</button>
-      <button class="helpful__button helpful__button--no"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i>No</button>
-    </div>
-
 
 </div>
 <div class="article col-md-3">
@@ -70,5 +64,5 @@
     	<li><a href="/docs/guides/wordpress-commandline">Use the Command Line to Create a WordPress Site Using Terminus and WP-CLI</a></li>
     </ul>-->
 </div>
-
+<iframe frameborder="0" width="100%" height="300px" src="https://www.getfeedback.com/r/12z1fMzn?page={{page.url}}&topic={{page.categories|last}}"></iframe>
 {% endblock %}
