--- a/source/_partials/footer_scripts.html
+++ b/source/_partials/footer_scripts.html
@@ -5,11 +5,11 @@
   <script src="/docs/assets/js/highlight.pack.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <script src="/docs/assets/js/src/application.js"></script>
+  <script src="/docs/assets/js/src/application.js?v=1.1.0"></script>
   <script src="/docs/assets/js/jquery.tocify.js"></script>
   <script src="//www.google-analytics.com/analytics.js"></script>
   <script src="/docs/assets/js/node_modules/clipboard/dist/clipboard.min.js"></script>
-  <script src="/docs/assets/js/main.js?v=2.2.0"></script>
+  <script src="/docs/assets/js/main.js?v=2.3.0"></script>
 
   <script>
   $(document).ready(function() {
@@ -83,7 +83,7 @@
   </script>
 
   <script type="text/javascript" src="//d2qkfn813cyz6e.cloudfront.net/js/pantheon-js-tracking.min.js?d=e"></script>
-  
+
   <!--Script for terminus/examples page to download reset script-->
   {% if page.createbackups %}
       <script type="text/javascript">
