Embed Can I Use: TLS 1.2 Supported Browsers table

--- a/source/_partials/footer_scripts.html
+++ b/source/_partials/footer_scripts.html
@@ -10,6 +10,7 @@
   <script src="//www.google-analytics.com/analytics.js"></script>
   <script src="/docs/assets/js/node_modules/clipboard/dist/clipboard.min.js"></script>
   <script src="/docs/assets/js/main.js?v=2.3.0"></script>
+  <script src="//cdn.jsdelivr.net/caniuse-embed/1.0.1/caniuse-embed.min.js"></script>
 
   <script>
   $(document).ready(function() {
