--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -33,6 +33,9 @@ function setActivetrail() {
       if(/\/create.*/.test(aaObj[i].href)>=1) {
         $('#docs-terminus-plugins').removeClass('active-trail');
       }
+      if(/\/updates.*/.test(aaObj[i].href)>=1) {
+        $('#docs-terminus').removeClass('active-trail');
+      }
     }
   }
 }
@@ -69,6 +72,12 @@ terminusRelease.controller('terminusReleaseCtrl', function($scope, $http) {
     .then(function (response) {
       var data = response.data;
       $scope.releases = data;
+      $scope.greaterThan = function(prop, val){
+          return function(item){
+            return item[prop] > val;
+          }
+      }
+
   });
   }
 );
