Clickable dropdown for the home page and fix terminus margin

--- a/source/_partials/navbar.html
+++ b/source/_partials/navbar.html
@@ -235,7 +235,7 @@ terminusCompareApp.filter('search', function() {
                 <li class=""><a href="https://dashboard.pantheon.io" target="_blank">Log In</a></li>
                 <li class=""><a href="https://dashboard.pantheon.io/#support/support/all" target="_blank">Support</a></li>
                 <li class="dropdown">
-                  <a href="/docs" class="dropdown-toggle active-trail" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="padding-left:15px;padding-right:25px;">Documentation</a>
+                  <a href="/docs" class="dropdown-toggle active-trail" role="button" aria-haspopup="true" aria-expanded="false" style="padding-left:15px;padding-right:25px;">Documentation</a>
 
                   <ul id="dropmenu" class="dropdown-menu">
                   <div class="row sub-menu-top">
