--- a/source/_partials/topics/get-started.html
+++ b/source/_partials/topics/get-started.html
@@ -90,6 +90,22 @@
             </ul>
           </div>
           <div class="subtopic-lists col-md-6">
+            <h4>Create Archives for Manual Migration</h4>
+            <ul class="topic-docs">
+            {% for doc in data.docs_tags.export if doc.meta.type == "guide"%}
+            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+            {% endfor %}
+            {% for doc in data.docs_tags.export if doc.meta.type == "video"%}
+            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+            {% endfor %}
+            {% for doc in data.docs_tags.export %}
+            {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
+            <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
+            {% endif %}
+            {% endfor %}
+            </ul>
+          </div>
+          <div class="subtopic-lists col-md-6">
             <h4>Manual Migrations</h4>
             <ul class="topic-docs">
             {% for doc in data.docs_tags.migratemanual if doc.meta.type == "guide"%}
