--- a/source/_partials/topics/automate.html
+++ b/source/_partials/topics/automate.html
@@ -1,34 +1,33 @@
 <div class="col-md-12">
   <div class="row">
-    <div class="col-md-6 mb-20" style="margin-top:20px;">
+    <div class="col-md-6 mb-70" style="margin-top:20px;">
       <script src="//fast.wistia.com/embed/medias/{{ page.videoid }}.jsonp" async></script><script src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_{{ page.videoid }} videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
     </div>
-    <div class="col-md-6">
-      <h2>Unsorted/Orphan Docs (automate) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
-      <p class="topic-info__description">These need some plannings.</p>
-      <ul class="topic-docs">
-        {% for doc in data.docs_tags.automate if doc.meta.type == "guide"%}
+    <div class="col-md-6 mb-70">
+      <h2>Guides <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h2>
+      <p class="topic-info__description">Create copy that clearly defines guides and why these are featured here.</p>
+      <ul style="list-style:none;padding-left:0px;">
+        {% for doc in data.docs_tags.siteintegrations if doc.meta.type == "guide"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
         {% endfor %}
-        {% for doc in data.docs_tags.automate if doc.meta.type == "video"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+        {% for doc in data.docs_tags.pantheonyml if doc.meta.type == "guide"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
         {% endfor %}
-        {% for doc in data.docs_tags.automate %}
-          {% if (doc.meta.type != "video") and (doc.meta.type != "guide") and (doc.meta.type != "terminuspage")%}
-            <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-          {% endif %}
+        {% for doc in data.docs_tags.devterminus if doc.meta.type == "guide"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.devwpcli if doc.meta.type == "guide"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
+        {% endfor %}
+        {% for doc in data.docs_tags.devdrush if doc.meta.type == "guide"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
         {% endfor %}
       </ul>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6 mb-20">
-      <h3>Site-Level Integrations</h3>
-      <p class="topic-info__description">Placeholder text about this group of docs.</p>
-      <ul class="topic-docs">
-        {% for doc in data.docs_tags.siteintegrations if doc.meta.type == "guide"%}
-          <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-        {% endfor %}
+    <div class="col-md-12 mb-20">
+      <ul class="top-docs top-docs-2col">
         {% for doc in data.docs_tags.siteintegrations if doc.meta.type == "video"%}
           <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
         {% endfor %}
@@ -43,21 +42,53 @@
   <div class="row">
     <div class="col-md-12 subtopic-container mb-70">
       <div class="subtopic-groups">
+        <h3>The pantheon.yml Configuration File</h3>
+        <p class="topic-info__description">Placeholder text about this group of docs.</p>
+      </div>
+      <div class="row">
+        <div class="col-md-12" style="padding:40px;">
+          <ul class="top-docs top-docs-2col">
+          {% for doc in data.docs_tags.pantheonyml if doc.meta.type == "video"%}
+          <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+          {% endfor %}
+          {% for doc in data.docs_tags.pantheonyml %}
+          {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
+          <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
+          {% endif %}
+          {% endfor %}
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12 subtopic-container mb-70">
+      <div class="subtopic-groups">
         <h3>Command Line Inerface</h3>
-        <p class="topic-info__description">Use Terminus to automate and script interactions with the platform from the command line.</p>
+        <p class="topic-info__description">Use Terminus to interact with the platform from the command line.</p>
       </div>
       <div class="row">
         <div class="col-md-12">
           <div class="subtopic-lists col-md-6">
-            <h4>WP-CLI</h4>
+            <h4>Terminus</h4>
             <ul class="topic-docs">
-            {% for doc in data.docs_tags.automatewpcli if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
-            {% for doc in data.docs_tags.automatewpcli if doc.meta.type == "video"%}
+            {% for doc in data.docs_tags.devterminus if doc.meta.type == "video"%}
             <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
             {% endfor %}
-            {% for doc in data.docs_tags.automatewpcli %}
+            {% for doc in data.docs_tags.devterminus %}
+            {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
+            <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
+            {% endif %}
+            {% endfor %}
+            </ul>
+          </div>
+          <div class="subtopic-lists col-md-6">
+            <h4>WP-CLI</h4>
+            <ul class="topic-docs">
+            {% for doc in data.docs_tags.devwpcli if doc.meta.type == "video"%}
+            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
+            {% endfor %}
+            {% for doc in data.docs_tags.devwpcli %}
             {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
             <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
             {% endif %}
@@ -67,29 +98,10 @@
           <div class="subtopic-lists col-md-6">
             <h4>Drush</h4>
             <ul class="topic-docs">
-            {% for doc in data.docs_tags.automatedrush if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
-            {% for doc in data.docs_tags.automatedrush if doc.meta.type == "video"%}
+            {% for doc in data.docs_tags.devdrush if doc.meta.type == "video"%}
             <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
             {% endfor %}
-            {% for doc in data.docs_tags.automatedrush %}
-            {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
-            <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-            {% endif %}
-            {% endfor %}
-            </ul>
-          </div>
-          <div class="subtopic-lists col-md-6">
-            <h4>Terminus</h4>
-            <ul class="topic-docs">
-            {% for doc in data.docs_tags.automateterminus if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-            {% endfor %}
-            {% for doc in data.docs_tags.automateterminus if doc.meta.type == "video"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-            {% endfor %}
-            {% for doc in data.docs_tags.automateterminus %}
+            {% for doc in data.docs_tags.devdrush %}
             {% if (doc.meta.type != "video") and (doc.meta.type != "guide") %}
             <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
             {% endif %}
@@ -97,23 +109,6 @@
             </ul>
           </div>
         </div>
-      </div>
-      <div class="subtopic-lists col-md-6">
-        <h3>Unsorted/Orphan Docs (automatecli) <i class="fa fa-angle-right" style="color:#EFD01B;"></i></h3>
-        <p class="topic-info__description">These need some plannings.</p>
-        <ul class="topic-docs">
-          {% for doc in data.docs_tags.automatecli if doc.meta.type == "guide"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-book"></i> {{ doc.title }}</a></li>
-          {% endfor %}
-          {% for doc in data.docs_tags.automatecli if doc.meta.type == "video"%}
-            <li><a href="{{ doc.url }}"><i class="fa fa-video-camera"></i> {{ doc.title }}</a></li>
-          {% endfor %}
-          {% for doc in data.docs_tags.automatecli %}
-            {% if (doc.meta.type != "video") and (doc.meta.type != "guide") and (doc.meta.type != "terminuspage")%}
-              <li><a href="{{ doc.url }}">{{ doc.title }}</a></li>
-            {% endif %}
-          {% endfor %}
-        </ul>
       </div>
     </div>
   </div>
